--- a/webapp/src/components/NFTImage/NFTImage.css
+++ b/webapp/src/components/NFTImage/NFTImage.css
@@ -27,6 +27,7 @@
 .NFTImage .rarity-background {
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
 }
